--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/logo.png
+    - assets/images/kabah.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
